--- a/2348553_SANJAY_S_RL_LAB_5.ipynb
+++ b/2348553_SANJAY_S_RL_LAB_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3EAAYSHdwpGgVkuEVo7v7",
+      "authorship_tag": "ABX9TyPxzKOkxHserxxQHhPaIeas",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,280 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "from collections import defaultdict\n",
+        "\n",
+        "# Define the grid environment\n",
+        "class GridWorldEnv:\n",
+        "    def __init__(self, grid_size=(4, 4), terminal_states={(0, 0), (3, 3)}):\n",
+        "        self.grid_size = grid_size\n",
+        "        self.terminal_states = terminal_states\n",
+        "        self.state = (3, 0)  # Starting state\n",
+        "        self.actions = ['up', 'down', 'left', 'right']\n",
+        "        self.rewards = {s: 1.0 for s in terminal_states}\n",
+        "        self.rewards.update({s: -1.0 for s in [(0, 3), (3, 1)]})  # Add negative rewards\n",
+        "\n",
+        "    def reset(self):\n",
+        "        self.state = (3, 0)  # Reset to starting state\n",
+        "        return self.state\n",
+        "\n",
+        "    def step(self, action):\n",
+        "        x, y = self.state\n",
+        "        if action == 'up':\n",
+        "            x = max(x - 1, 0)\n",
+        "        elif action == 'down':\n",
+        "            x = min(x + 1, self.grid_size[0] - 1)\n",
+        "        elif action == 'left':\n",
+        "            y = max(y - 1, 0)\n",
+        "        elif action == 'right':\n",
+        "            y = min(y + 1, self.grid_size[1] - 1)\n",
+        "\n",
+        "        self.state = (x, y)\n",
+        "        reward = self.rewards.get(self.state, 0.0)\n",
+        "        done = self.state in self.terminal_states\n",
+        "        return self.state, reward, done\n",
+        "\n",
+        "    def sample_action(self):\n",
+        "        return random.choice(self.actions)\n",
+        "\n",
+        "    def get_action_space(self):\n",
+        "        return self.actions\n",
+        "\n",
+        "# Create the environment\n",
+        "env = GridWorldEnv()\n"
+      ],
       "metadata": {
-        "id": "eWO3NSS2-mki"
+        "id": "BOFwSaP69d0E"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mc_prediction(env, policy, episodes, gamma=0.9):\n",
+        "    \"\"\"Monte Carlo Prediction to estimate V(s) for a given policy.\"\"\"\n",
+        "    V = defaultdict(float)\n",
+        "    returns = defaultdict(list)\n",
+        "\n",
+        "    for ep in range(episodes):\n",
+        "        # Generate an episode\n",
+        "        state = env.reset()\n",
+        "        episode = []\n",
+        "        done = False\n",
+        "\n",
+        "        while not done:\n",
+        "            action = policy(state)\n",
+        "            next_state, reward, done = env.step(action)\n",
+        "            episode.append((state, reward))\n",
+        "            state = next_state\n",
+        "\n",
+        "        # Compute returns and update V\n",
+        "        G = 0\n",
+        "        visited_states = set()\n",
+        "        for t in reversed(range(len(episode))):\n",
+        "            state, reward = episode[t]\n",
+        "            G = reward + gamma * G\n",
+        "            if state not in visited_states:  # First-visit MC\n",
+        "                returns[state].append(G)\n",
+        "                V[state] = np.mean(returns[state])\n",
+        "                visited_states.add(state)\n",
+        "\n",
+        "    return V\n"
+      ],
+      "metadata": {
+        "id": "FSDx6mqj9eMM"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mc_control(env, episodes, gamma=0.9, epsilon=0.1):\n",
+        "    \"\"\"Monte Carlo Control with Exploring Starts to find optimal policy.\"\"\"\n",
+        "    Q = defaultdict(lambda: defaultdict(float))\n",
+        "    returns = defaultdict(lambda: defaultdict(list))\n",
+        "    actions = env.get_action_space()\n",
+        "\n",
+        "    for ep in range(episodes):\n",
+        "        # Generate an episode with exploring starts\n",
+        "        state = env.reset()\n",
+        "        action = random.choice(actions)\n",
+        "        episode = []\n",
+        "        done = False\n",
+        "\n",
+        "        while not done:\n",
+        "            next_state, reward, done = env.step(action)\n",
+        "            episode.append((state, action, reward))\n",
+        "            state = next_state\n",
+        "            if not done:\n",
+        "                action = random.choice(actions)\n",
+        "\n",
+        "        # Compute returns and update Q\n",
+        "        G = 0\n",
+        "        visited_state_action_pairs = set()\n",
+        "        for t in reversed(range(len(episode))):\n",
+        "            state, action, reward = episode[t]\n",
+        "            G = reward + gamma * G\n",
+        "            if (state, action) not in visited_state_action_pairs:  # First-visit MC\n",
+        "                returns[state][action].append(G)\n",
+        "                Q[state][action] = np.mean(returns[state][action])\n",
+        "                visited_state_action_pairs.add((state, action))\n",
+        "\n",
+        "    # Derive policy from Q\n",
+        "    policy = {}\n",
+        "    for state in Q:\n",
+        "        policy[state] = max(Q[state], key=Q[state].get)  # Greedy policy\n",
+        "\n",
+        "    return Q, policy\n"
+      ],
+      "metadata": {
+        "id": "C6KR-hXK9kEu"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def random_policy(state):\n",
+        "    \"\"\"Random policy: chooses actions uniformly at random.\"\"\"\n",
+        "    return env.sample_action()\n"
+      ],
+      "metadata": {
+        "id": "rZEGGAJM9nf-"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Monte Carlo Prediction\n",
+        "V = mc_prediction(env, random_policy, episodes=1000)\n",
+        "print(\"State-Value Function V(s):\")\n",
+        "for state, value in V.items():\n",
+        "    print(f\"State {state}: {value:.2f}\")\n",
+        "\n",
+        "# Test Monte Carlo Control\n",
+        "Q, policy = mc_control(env, episodes=1000)\n",
+        "print(\"\\nOptimal Action-Value Function Q(s, a):\")\n",
+        "for state, actions in Q.items():\n",
+        "    for action, value in actions.items():\n",
+        "        print(f\"State {state}, Action {action}: {value:.2f}\")\n",
+        "\n",
+        "print(\"\\nDerived Optimal Policy:\")\n",
+        "for state, action in policy.items():\n",
+        "    print(f\"State {state}: {action}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9y3n1a-6-DZs",
+        "outputId": "31f08051-d7f6-42f5-c17d-00316beab0ca"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "State-Value Function V(s):\n",
+            "State (1, 0): 0.28\n",
+            "State (2, 0): -0.17\n",
+            "State (3, 0): -0.55\n",
+            "State (2, 3): 0.19\n",
+            "State (2, 2): -0.07\n",
+            "State (2, 1): -0.12\n",
+            "State (3, 2): 0.23\n",
+            "State (3, 1): 0.36\n",
+            "State (1, 1): -0.03\n",
+            "State (1, 2): -0.14\n",
+            "State (0, 1): 0.23\n",
+            "State (0, 2): -0.10\n",
+            "State (0, 3): 0.23\n",
+            "State (1, 3): -0.13\n",
+            "\n",
+            "Optimal Action-Value Function Q(s, a):\n",
+            "State (1, 0), Action up: 1.00\n",
+            "State (1, 0), Action right: -0.25\n",
+            "State (1, 0), Action left: 0.07\n",
+            "State (1, 0), Action down: -0.46\n",
+            "State (2, 0), Action up: 0.22\n",
+            "State (2, 0), Action left: -0.37\n",
+            "State (2, 0), Action down: -0.79\n",
+            "State (2, 0), Action right: -0.41\n",
+            "State (2, 1), Action left: -0.25\n",
+            "State (2, 1), Action down: -1.46\n",
+            "State (2, 1), Action right: -0.22\n",
+            "State (2, 1), Action up: -0.11\n",
+            "State (3, 1), Action up: -0.26\n",
+            "State (3, 1), Action right: 0.11\n",
+            "State (3, 1), Action left: -0.43\n",
+            "State (3, 1), Action down: -1.22\n",
+            "State (2, 2), Action left: -0.44\n",
+            "State (2, 2), Action right: -0.05\n",
+            "State (2, 2), Action down: -0.24\n",
+            "State (2, 2), Action up: -0.40\n",
+            "State (1, 1), Action down: -0.66\n",
+            "State (1, 1), Action up: 0.08\n",
+            "State (1, 1), Action left: 0.22\n",
+            "State (1, 1), Action right: -0.54\n",
+            "State (0, 1), Action down: -0.15\n",
+            "State (0, 1), Action right: -0.63\n",
+            "State (0, 1), Action left: 1.00\n",
+            "State (0, 1), Action up: 0.06\n",
+            "State (3, 2), Action up: -0.32\n",
+            "State (3, 2), Action down: -0.22\n",
+            "State (3, 2), Action left: -1.51\n",
+            "State (3, 2), Action right: 1.00\n",
+            "State (3, 0), Action up: -0.23\n",
+            "State (3, 0), Action left: -0.82\n",
+            "State (3, 0), Action right: -1.37\n",
+            "State (3, 0), Action down: -0.77\n",
+            "State (1, 2), Action down: -0.28\n",
+            "State (1, 2), Action left: -0.21\n",
+            "State (1, 2), Action right: -0.63\n",
+            "State (1, 2), Action up: -0.66\n",
+            "State (0, 2), Action down: -0.34\n",
+            "State (0, 2), Action right: -2.03\n",
+            "State (0, 2), Action up: -0.41\n",
+            "State (0, 2), Action left: 0.28\n",
+            "State (0, 3), Action left: -0.18\n",
+            "State (0, 3), Action right: -1.65\n",
+            "State (0, 3), Action down: -0.37\n",
+            "State (0, 3), Action up: -1.45\n",
+            "State (1, 3), Action up: -2.07\n",
+            "State (1, 3), Action down: 0.08\n",
+            "State (1, 3), Action left: -0.36\n",
+            "State (1, 3), Action right: -0.83\n",
+            "State (2, 3), Action up: -0.86\n",
+            "State (2, 3), Action down: 1.00\n",
+            "State (2, 3), Action right: -0.05\n",
+            "State (2, 3), Action left: -0.29\n",
+            "\n",
+            "Derived Optimal Policy:\n",
+            "State (1, 0): up\n",
+            "State (2, 0): up\n",
+            "State (2, 1): up\n",
+            "State (3, 1): right\n",
+            "State (2, 2): right\n",
+            "State (1, 1): left\n",
+            "State (0, 1): left\n",
+            "State (3, 2): right\n",
+            "State (3, 0): up\n",
+            "State (1, 2): left\n",
+            "State (0, 2): left\n",
+            "State (0, 3): left\n",
+            "State (1, 3): down\n",
+            "State (2, 3): down\n"
+          ]
+        }
+      ]
     }
   ]
 }
